# gpt-cli

./: Cargo.toml  README.md
src/: chatroutine.rs  interact.rs  main.rs  oai.rs  oneshotroutine.rs
