[package]
name = "gpt-cli"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "^0.14", features = ["full"]}
hyper-tls = "^0.5"
tokio = {version = "1", features = ["full"]}
serde = "^1.0"
serde_derive = "^1"
serde_json = "^1"
log = "0.4.20"
env_logger = "0.10.0"
spinners = "4.1.0"
clap = { version = "4.4.7", features = ["derive"] }
